# benjaminpatch.com

./: .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CNAME  Gemfile  README.md  _config.yml  about.md  archives.html  authors.html  benjaminpatch.com.sublime-workspace  biography.md  browserconfig.xml  categories.html  config.rb  connect.md  filmography.md  films.html  gitlab-ci.yml  humans.txt  index.html  nginx.conf  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  site.webmanifest  sitemap.xml  tags.html
_data/: navigation.yml
_films/: astray.md  awake.md  choice-words.md  cold-light.md  doppler-salad.md  iceland-montage.md  plastic-hero.md  shelf-space.md
_includes/: analytics.html  footer-nav.html  footer.html  header.html  navigation.html
_layouts/: default.html  film.html
_sass/: main.scss
about/: index.html
author/benjamin-patch/: index.html
category/ai-ethos/: index.html
category/ai-fundamentals/: index.html
category/ai-in-practice/: index.html
category/web-development/: index.html
connect/: index.html
contact/: index.html
content/extra/: about-favicon.txt  humans.txt  robots.txt
content/pages/: 404.md  about.md
feeds/: ai-ethos.atom.xml  ai-fundamentals.atom.xml  ai-in-practice.atom.xml  all.atom.xml  web-development.atom.xml
pages/about/: index.html
rates/: index.html
resume/: index.html
rw_project/benjaminpatch.com.rw8/: Contents.plist  (+1 more)
sitemap/: index.html
source/: 404.html  biography.html.erb  connect.html.erb  filmography.html.erb  humans.txt  index.html.erb  robots.txt.erb
styled/: index.html
(+117 files in other folders)
