[project]
name = "benjaminpatch-com"
version = "2025.05.21"
description = "Public website for benjaminpatch.com"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "anyio==4.8.0",
    "blinker==1.7.0",
    "docutils==0.21.2",
    "feedgenerator==2.1.0",
    "idna==3.10",
    "invoke==2.2.0",
    "jinja2==3.1.6",
    "livereload==2.7.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ordered-set==4.1.0",
    "pelican==4.11.0",
    "pelican-sitemap==1.2.0",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "rich==13.9.4",
    "six==1.17.0",
    "smartypants==2.0.1",
    "sniffio==1.3.1",
    "tornado==6.4.2",
    "typogrify==2.1.0",
    "unidecode==1.3.8",
    "watchfiles==1.0.4",
]
